Added SIP Registeration Trunk

--- a/somleng_patches/app/views/dashboard/sip_trunks/_form.html.erb
+++ b/somleng_patches/app/views/dashboard/sip_trunks/_form.html.erb
@@ -70,6 +70,16 @@
             <%= f.input :password, as: :string, placeholder: "sip_password", hint: "The SIP password for registering with the remote PBX" %>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-sm-6">
+            <%= f.input :auth_user, placeholder: "auth_username", hint: "The authentication username, if different from the SIP username. Most often unset." %>
+          </div>
+
+          <div class="col-sm-6">
+            <%= f.input :outbound_proxy, placeholder: "proxy.example.com:5060", hint: "A proxy used to reach your SIP server for registration. Most often unset." %>
+          </div>
+        </div>
       </div>
     </div>
 
